# api/faq/routes.js
@@ -6,9 +6,9 @@ const requireLogin = require('../utils/requirelogin');
 
 var router = express.Router();
 
-router.get('/:id', requireLogin, controller.getFAQ);
-router.get('/', requireLogin, controller.getAllFAQ);
-router.post('/', requireLogin, controller.raiseFAQTicket);
+router.get('/:id', controller.getFAQ);
+router.get('', controller.getAllFAQ);
+router.post('', requireLogin, controller.raiseFAQTicket);
 router.put('/:id', requireLogin, controller.updateFAQ);
 
 module.exports = router;
